--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     </head>
 <body>
     <canvas id="renderCanvas"></canvas>
-    <script "text/javascript" src="coolfile.js"></script>
+    <script type="text/javascript" src="coolfile.js"></script>
 </body>
 </html>
